Spacing fix and fixed api call to avoid duplicate calls.

--- a/src/app/uptime/monitor-checks/monitor-checks.component.scss
+++ b/src/app/uptime/monitor-checks/monitor-checks.component.scss
@@ -6,12 +6,12 @@ table {
   width: 100%;
 }
 
-.mat-colum-status {
-  margin-right: 10px;
+.mat-column-status {
+  padding-right: 10px;
 }
 
 .mat-column-reason {
-  margin-right: 10px;
+  padding-right: 10px;
 }
 
 .mat-column-responseTime {
